# TSCopulas

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  tscopulas.html  tscopulas.models.html  tscopulas.preprocessing.html
_sources/: tscopulas.models.rst.txt  tscopulas.preprocessing.rst.txt  tscopulas.rst.txt
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  tscopulas.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  search.html  searchindex.js  tscopulas.html
docs/_build/html/_sources/: index.rst.txt  modules.rst.txt  tscopulas.rst.txt
notebooks/: Lagging Multivariate Gaussian Demo.ipynb  ResNet_Classifier_Augmentation.ipynb  lag_demo.ipynb  market_regimes_experiment.ipynb
notebooks/.ipynb_checkpoints/: Lagging Multivariate Gaussian Demo-checkpoint.ipynb  Markowitz_Simulation-checkpoint.ipynb
tests/: test_foo.py  test_utils.py
tests/test_models/: test_gaussian.py  test_vine.py
tests/test_preprocessing/: test_lag_transform.py
tscopulas/: foo.py  utils.py
tscopulas/conditional_sampling/: multivariate_gaussian.py
tscopulas/conditional_sampling/.ipynb_checkpoints/: Lagging Multivariate Gaussian Demo-checkpoint.ipynb
tscopulas/models/: base.py  gaussian.py  vine.py
tscopulas/preprocessing/: lag_transform.py
