[tool.poetry]
name = "tscopulas"
version = "0.0.1"
description = "Copula Modelling for Time Series Analysis"
authors = ["Ryan Downing <ryansdowning1@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8"
numpy = "^1.21.3"
copulas = "^0.5.1"

[tool.poetry.dev-dependencies]
isort = "^5.9.3"
pre-commit = "^2.15.0"
pytest = "^6.2.5"
flake8 = "^4.0.1"
Sphinx = "^4.2.0"
pydata-sphinx-theme = "^0.7.1"
pytest-cov = "^3.0.0"
pandas = "1.1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
